--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -46,7 +46,7 @@ body {
   }
 
   .content-col {
-    background-color: #f8f6ea;
+    background-color: #272822;
     padding: $spacer-5;
     order: 2;
   }
