--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,3 @@
 .main-content, .markdown-body {
-  background-color: #272822; /* Replace with your desired color */
+  background-color: #fcfbf5; /* Replace with your desired color */
 }
