--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/app.css?v=" | append: site.github.build_revision | relative_url }}">
-    
+    <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
   </head>
   <body>
     {% include navbar.html %}
