--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,6 @@
 .main-content, .markdown-body {
   background-color: #f8f6ea; /* Replace with your desired color */
 }
+body {
+  background-color: #fcfbf5; /* Replace with your color */
+}
